--- a/pillar.example
+++ b/pillar.example
@@ -14,7 +14,7 @@ TEMPLATE:
   pkg:
     name: bash
   service:
-    name: systemd-journald
+    name: com.apple.Spotlight
   config: /etc/template-formula.conf
 
   tofs:
